fixed small layout issue with nav menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,7 +119,7 @@ a:hover{
     }
 
     .header{
-        max-height: 100px;
+        max-height: 110px;
     }
 
     .img-custom{
